# codecrafters-bittorrent-rust

./: .gitignore  Cargo.toml  README.md  bittorrent.file  example.torrent
examples/: parse_torrent.rs
src/: de.rs  decode.rs  encode.rs  error.rs  frame.rs  lib.rs  main.rs  parse.rs  peers.rs  torrent.rs  tracker.rs  value.rs
src/decode/: mod.rs
