# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "bittorrent-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.68"                                                  # error handling
bytes = "1.3.0"                                                    # helps wrap responses from reqwest
clap = { version = "4.0.32", features = ["derive"] }                # creating a cli
hex = "0.4.3"
regex = "1"                                                        # for regular expressions
reqwest = { version = "0.11.18", features = ["json", "blocking"] } # http requests
serde = { version = "1.0.136", features = ["derive"] }             # for json mangling
serde_bencode = "0.2.3"                                            # for bencode encoding/decoding
serde_bytes = { version = "0.11.12", features = [] }
serde_json = "1.0.105"                                             # for json mangling
serde_urlencoded = "0.7.1"                                         # for url encoding
sha1 = "0.10.1"
tempfile = "3"                                                     # creating temporary directories
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
log = "0.4.20"                # async http requests
serde_derive = "1.0.193"
linked-hash-map = "0.5.6"
percent-encoding = "2.3.1"
urlencoding = "2.1.3"
bincode = "1.3.3"
bincode_derive = "2.0.0-rc.3"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures-util = "0.3.29"
futures = "0.3.29"


